update: feature/card

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,10 @@
 $bg-color: #fff;
 $txt-color: #000;
 
-$card-bd-radius: 8px;
+$tmdbLightGreen: rgb(30, 213, 169);
+$lightGrey: rgba(227, 227, 227);
+
+$bd-radius: 8px;
 $box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
 
 $mobile-width: 600px;
