--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @use './scss/' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400&display=swap');
-
+@import 'react-circular-progressbar/dist/styles.css';
 * {
    padding: 0;
    margin: 0;
