fix bugs: deathday

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $txt-color: #000;
 
 $tmdbLightGreen: rgb(30, 213, 169);
 $lightGrey: rgba(227, 227, 227);
+$accountLightBlue: rgba(1, 180, 228);
 
 $bd-radius: 8px;
 $box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
