--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,16 @@ html {
 }
 
 body {
+   &::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+      border-radius: 10px;
+      background-color: #fff;
+   }
+   &::-webkit-scrollbar-thumb {
+      background-color: #ccc;
+      border-radius: 10px;
+   }
    font-family: $font-family;
    font-weight: 400;
    line-height: 1.5;
