--- a/src/components/people/actingList/acting.scss
+++ b/src/components/people/actingList/acting.scss
@@ -1,20 +1,32 @@
 @use '../../../scss/' as *;
 
+.acting-list {
+   &__item {
+      box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+   }
+}
 .acting {
    background-color: #fff;
    border: 1px solid rgba($lightGrey, 1);
    border-bottom: none;
+   &:last-child {
+      border: 1px solid rgba($lightGrey, 1);
+   }
+
    &__item {
       padding: 8px 16px;
       @include flex(unset, unset, unset);
       &__left {
-         width: 90px;
          @include flex(unset, space-around, unset);
          &__year {
+            width: 60px;
          }
          &__null {
+            width: 60px;
+            padding-left: 7px;
          }
          &__check {
+            width: 30px;
             svg {
                //    color: #000;
                color: unset;
