update modal trailer

--- a/src/components/movieDetail/main/content/contentMovieDetail.scss
+++ b/src/components/movieDetail/main/content/contentMovieDetail.scss
@@ -59,6 +59,7 @@
    pointer-events: none;
 }
 .cards-list {
+   padding-bottom: 10px;
    display: flex;
    overflow-y: hidden;
    overflow-x: scroll;
