--- a/src/components/movieDetail/header/headerMovieDetail.scss
+++ b/src/components/movieDetail/header/headerMovieDetail.scss
@@ -492,6 +492,7 @@
     right: 0;
     bottom: 0;
     z-index: 1;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: center;
